# wasm-demo

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  binding.gyp  build.bat  build.sh  cmakebuild.bat  index.html  index.js  package.json
public/: crypto.js  crypto.wasm  index.html  index.js
src/: addon.cpp  base64.c  base64.h  crypto.cpp  crypto.hpp  wasm.cpp
